--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Mrs+Saint+Delafield&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Mrs+Saint+Delafield&display=swap");
 /* 
 main colors
 #CA8E46  
@@ -10,90 +10,35 @@ main colors
 #151517
 
 */
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: "Montserrat";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
 }
 
 /*------ navbar ----- */
-.navbar-expand-lg{
-  background-color:#000000f7;
+.navbar-expand-lg {
+  background-color: #000000f7;
 }
-nav .logo{
-  color: #CA8E46;
+nav .logo {
+  color: #ca8e46;
   margin-left: 10px;
   font-weight: 600;
   font-size: 40px;
   font-family: "Mrs Saint Delafield";
   letter-spacing: 2px;
 }
-nav .nav-item a{
+nav .nav-item a {
   color: #fff;
   margin-right: 15px;
-  font-weight: 500; 
+  font-weight: 500;
 }
-nav .nav-item a:hover{
-  color: #CA8E46;
+nav .nav-item a:hover {
+  color: #ca8e46;
 }
-nav .btn { 
-    text-align: center;
-    color: #fff;
-    border-radius: 0px;
-    outline: 0;
-    font-weight: 800;
-    text-decoration: none;
-    padding: 8px 30px;
-    font-size: 12px;
-    font-weight: 600;
-    border: none;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    background-color: #CA8E46;
-}
-nav .btn:hover{
-  color: #CA8E46;
-  background-color: white;
-  transition: .5s all ease-in-out;
-}
-
-/* ---- header ----- */
-header img{
-  height:100%;
-  width: 100%;
-}
-header .carousel-item{
-  
-  height: 90vh;
-}
-
-.carousel-item .content {
-position: absolute;
-top: 150px;
-left: 200px;
-width: 60%;
-}
-
-.carousel-item h3{
-  font-size: 110px;
-  line-height: .75em;
-  margin-bottom: 20px;
-  font-family: "Mrs Saint Delafield";
-  color: #CA8E46;
-  font-weight: 400;
-
-}
-
-.carousel-item h1 {
-  font-size: 70px;
-color: #fff;
-margin-bottom: 40px;
-font-weight: 700;
-letter-spacing: 5px;
-text-transform: uppercase;
-}
-.carousel-item .btn { 
+nav .btn,
+.addUser {
   text-align: center;
   color: #fff;
   border-radius: 0px;
@@ -106,83 +51,134 @@ text-transform: uppercase;
   border: none;
   text-transform: uppercase;
   letter-spacing: 2px;
-  background-color: #CA8E46;
+  background-color: #ca8e46;
 }
-.carousel-item .btn:hover{
-  color: #CA8E46;
+nav .btn:hover {
+  color: #ca8e46;
   background-color: white;
-  transition: .5s all ease-in-out;
+  transition: 0.5s all ease-in-out;
+}
+
+/* ---- header ----- */
+header img {
+  height: 100%;
+  width: 100%;
+}
+header .carousel-item {
+  height: 90vh;
+}
+
+.carousel-item .content {
+  position: absolute;
+  top: 150px;
+  left: 200px;
+  width: 60%;
+}
+
+.carousel-item h3 {
+  font-size: 110px;
+  line-height: 0.75em;
+  margin-bottom: 20px;
+  font-family: "Mrs Saint Delafield";
+  color: #ca8e46;
+  font-weight: 400;
+}
+
+.carousel-item h1 {
+  font-size: 70px;
+  color: #fff;
+  margin-bottom: 40px;
+  font-weight: 700;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+.carousel-item .btn {
+  text-align: center;
+  color: #fff;
+  border-radius: 0px;
+  outline: 0;
+  font-weight: 800;
+  text-decoration: none;
+  padding: 8px 30px;
+  font-size: 12px;
+  font-weight: 600;
+  border: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background-color: #ca8e46;
+}
+.carousel-item .btn:hover {
+  color: #ca8e46;
+  background-color: white;
+  transition: 0.5s all ease-in-out;
 }
 
 /* ----- about -------- */
-.about h5 span{
+.about h5 span {
   font-size: 100px;
-  line-height: .75em;
+  line-height: 0.75em;
   margin-bottom: 20px;
   font-family: "Mrs Saint Delafield";
-  color: #CA8E46;
+  color: #ca8e46;
   font-weight: 400;
 }
-.about h2{
+.about h2 {
   font-size: 35px;
   color: #fff;
   margin-bottom: 40px;
   margin-top: -20px;
   font-weight: 700;
-  letter-spacing: 7px;  
+  letter-spacing: 7px;
 }
-.about p{
-  color:#999999
+.about p {
+  color: #999999;
 }
 
 /* ----- location --------- */
 
-.backimg{
+.backimg {
   background-image: url(../images/background/3.jpg);
   height: 70vh;
 }
-.backimg .overlay .location{
+.backimg .overlay .location {
   position: relative;
   width: 100%;
   top: 29%;
 }
-.backimg .overlay{
+.backimg .overlay {
   height: 100%;
   background-color: #00000030;
 }
-.backimg .overlay .location i{
+.backimg .overlay .location i {
   font-size: 30px;
-  color: #CA8E46;
+  color: #ca8e46;
   padding-bottom: 20px;
-} 
-.location span{
-  color:#999999;
+}
+.location span {
+  color: #999999;
   font-size: 15px;
-  
 }
 
 /* ------ quote --------- */
-.quote h2{
+.quote h2 {
   font-size: 27px;
   font-weight: 400;
   line-height: 1.5;
-
 }
-
 
 /* ----- footer ------ */
-.footer-i i{
-    color: white;
-    background-color: #CA8E46;
-   
-    border-radius: 50%;
-    margin: 4px;
-    padding: 15px;
+.footer-i i {
+  color: white;
+  background-color: #ca8e46;
+
+  border-radius: 50%;
+  margin: 4px;
+  padding: 15px;
 }
-.footer-i i:hover{
-  color: #CA8E46;
+.footer-i i:hover {
+  color: #ca8e46;
   background-color: white;
-  transition: .5s all ease-in-out;
+  transition: 0.5s all ease-in-out;
 }
 
 /* -------------------------------------------------------------------------- */
