--- a/css/userHome.css
+++ b/css/userHome.css
@@ -3,10 +3,64 @@
     margin: 10px;
     cursor: pointer;
 }
+.table-div{
+ 
+    height:600px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 5px;
+    overflow-y: auto;
+    position: absolute;
+    top: 35%;
+    right: 100px;
+}
+.table-div h2,.table-div h3{
+    margin-top: 10px;
+    color: #ca8e46;
+}
+.btn-dark{
+    /* background-color: #ca8e46;
+    color: white; */
+    --bs-btn-bg: #ca8e46;
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #ca8e46;
+    --bs-btn-border-color: #ca8e46;
+    --bs-btn-disabled-border-color: #ca8e46;
+    padding: 7px 17px;
+    margin-right: 10px;
+    font-size: 17px;
+    letter-spacing: 1px;
+    font-weight: 600;
 
-.card
+
+}
+.counter {
+    border:1px solid #ca8e46;
+}
+
+/* .card
 {
-    border: 0px;
+    border: 0px solid transparent !important;
+} */
+.card img{
+    border: 0px solid transparent !important ;
+    /* border-radius: 10px; */
+}
+.card .card-body{
+
+    background-color: #edd19033;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border: 1px solid transparent;
+
+    color: black;
+    /* background-color: #ca8e46; */
+    /* color: white; */
+}
+.card .card-img-top{
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border: 1px solid transparent;
 }
 .pagination li a
 {
@@ -21,10 +75,10 @@
     height: 300px;
 }
 
-.card-body
+/* .card-body
 {
     background-color: rgb(234 234 234);
-}
+} */
 .card-body h4
 {
     font-family: 'Moon Dance', cursive;
@@ -44,14 +98,13 @@
 
 .hidePagination
 {
-    background-color: brown !important;
     display: none !important;
 }
 
-#row1
+/* #row1
 {
     border-bottom: 10px solid crimson;
-}
+} */
 
 #cart
 {
@@ -60,3 +113,6 @@
     /* delete the margin*/
     margin-bottom: 50px;
 }
+
+
+
