--- a/css/all_users.css
+++ b/css/all_users.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Mrs+Saint+Delafield&display=swap");
 *{
     margin: 0;
     padding: 0;
