--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,8 @@
 /* start login */
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Mrs+Saint+Delafield&display=swap");
+*{
+  font-family: "Montserrat";
+}
 .login .login_backimg{
     background-image: url(../images/background/5.jpg);
     height: 100vh;
