--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,6 +14,10 @@ font-family: "Montserrat";
 .navbar-expand-lg{
   background-color:#000000f7;
 }
+/* .navbar-toggler-icon {
+  background-color: #CA8E46;
+
+} */
 
 
 nav .logo{
