--- a/css/userHome.css
+++ b/css/userHome.css
@@ -17,10 +17,11 @@
     border-radius: 10px;
     padding: 10px;
     overflow-y: auto  ;
-    position: absolute;
+    /* position: absolute;
     top: 35%;
-    right: 100px;
+    right: 100px; */
 }
+
 .table-div h2,.table-div h3{
     margin-top: 20px;
     color: #ca8e46;
